--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   -->
   <script src="js/config.js"></script>
   <script src="js/icons.js"></script>
-  <script src="js/main.js"></script>
+<script src="js/main.js?v=2"></script>
 
 </body>
 </html>
